--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = "1.8.21"
+    ext.kotlin_version = "2.1.0"
     repositories {
         mavenCentral()
         google()
@@ -58,6 +58,15 @@ android {
         versionCode 2
         versionName "2.0.0"
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    kotlinOptions {
+        jvmTarget = '17'
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -70,17 +79,12 @@ android {
 }
 
 repositories {
-    maven {
-        //update periodically - current version: 0.70.5
-        url "$rootDir/react-native-android"
-    }
     mavenCentral()
     google()
-
 }
 
 dependencies {
-    api 'com.facebook.react:react-native'
+    api 'com.facebook.react:react-android:+'
 
     //
     // In your app, you should include mParticle core like this:
@@ -104,6 +108,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     testImplementation files('libs/java-json.jar')
 
-    testImplementation 'com.mparticle:android-core:5.55.0'
-    testImplementation 'com.facebook.react:react-native:0.20.1'
+    testImplementation 'com.mparticle:android-core:5+'
+    testImplementation("com.facebook.react:react-android:+")
 }
