--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,9 +4,19 @@ updates:
     directory: "/android"
     schedule:
       interval: daily
-    labels: ["dependabot"]
+    labels:
+      - dependabot
     open-pull-requests-limit: 10
     ignore:
       - dependency-name: "com.google.firebase:firebase-messaging"
+    commit-message:
+      prefix: "chore"
+  - package-ecosystem: github-actions
+    directory: /
+    schedule:
+      interval: weekly
+    open-pull-requests-limit: 4
+    labels:
+      - dependabot
     commit-message:
       prefix: "chore"
