--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -13,7 +13,7 @@ jobs:
       steps:
       - name: "Checkout"
         uses: actions/checkout@v4
-      - uses: actions/setup-node@master
+      - uses: actions/setup-node@v4.4.0
         with:
           node-version: 18
           cache: yarn
@@ -56,6 +56,79 @@ jobs:
         - name: "Run Android Unit Tests"
           working-directory: android
           run: ./gradlew ktlintCheck
+
+    android-sample-app:
+      name: Android Sample App
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v4
+        - uses: actions/setup-node@v4.4.0
+          with:
+            node-version: 18
+            cache: yarn
+            cache-dependency-path: yarn.lock
+
+        - name: Install node modules
+          run: yarn install
+
+        - name: Build package
+          run: yarn dev:pack
+
+        - name: Install sample app dependencies
+          working-directory: sample
+          run: |
+            rm -f yarn.lock
+            yarn install
+
+        - name: Run Android sample app
+          working-directory: sample/android
+          run: ./gradlew assembleDebug
+
+    ios-sample-app:
+      name: iOS Sample App
+      runs-on: macos-15
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v4
+        - uses: actions/setup-node@v4.4.0
+          with:
+            node-version: 18
+            cache: yarn
+            cache-dependency-path: yarn.lock
+
+        - name: Set up Xcode
+          uses: maxim-lobanov/setup-xcode@v1.6.0
+          with:
+            xcode-version: 16.3
+
+        - name: Install node modules
+          run: yarn install
+
+        - name: Build package
+          run: yarn dev:pack
+
+        - name: Install sample app dependencies
+          working-directory: sample
+          run: |
+            rm -f yarn.lock
+            yarn install
+
+        - name: Install Ruby dependencies
+          working-directory: sample
+          run: bundle install
+
+        - name: Build iOS sample app
+          working-directory: sample/ios
+          run: |
+            bundle exec pod install
+            set -o pipefail && xcodebuild -workspace MParticleSample.xcworkspace \
+            -configuration Debug \
+            -scheme MParticleSample \
+            -destination 'platform=iOS Simulator,name=iPhone 16' \
+            -derivedDataPath ios/build \
+            -UseModernBuildSystem=YES \
+            build | bundle exec xcpretty -k
 
     automerge-dependabot:
       name: "Save PR Number for Dependabot Automerge"
