fix: add iOS configuration for RoktNativeLayout in package.json
In new version of RN view class name was not detected automatically.
Add the mapping configuration in codegen config

--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "jsSrcsDir": "js/codegenSpecs",
     "android": {
       "javaPackageName": "com.mparticle.react"
+    },
+    "ios": {
+      "RoktNativeLayout": "RoktNativeLayoutComponentView"
     }
   }
 }
