--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -108,7 +108,7 @@ jobs:
         - name: Set up Xcode
           uses: maxim-lobanov/setup-xcode@v1.6.0
           with:
-            xcode-version: 16.3
+            xcode-version: latest-stable
 
         - name: Setup iOS Simulator
           uses: futureware-tech/simulator-action@v4
@@ -116,7 +116,7 @@ jobs:
           with:
             model: iPhone 16
             os: iOS
-            os_version: "18.4"
+            os_version: ">=18.0"
             wait_for_boot: true
             shutdown_after_job: true
 
