--- a/sample/package.json
+++ b/sample/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "cd ios && pod install"
   },
   "dependencies": {
     "react": "18.3.1",
